--- a/chrome/focusstreak/overlay.css
+++ b/chrome/focusstreak/overlay.css
@@ -1,6 +1,5 @@
-div.focusstreak_overlay {
-  opacity:    0.95;
-  background: #000;
+#focusstreak_overlay {
+  background: rgba(0, 0, 0, 0.9);
   width:      100%;
   height:     100%;
   z-index:    9998 !important;
@@ -9,7 +8,7 @@ div.focusstreak_overlay {
   position:   fixed;
 }
 
-.focusstreak_overlay_frame {
+#focusstreak_overlay_content {
   background: red;
   height: 75%;
   width: 75%;
@@ -19,6 +18,13 @@ div.focusstreak_overlay {
   bottom: 0;
   left: 0;
   right: 0;
-
+  border:2px solid;
+  border-radius:25px;
   margin: auto;
+}
+
+h1 {
+  font-family: Arial !important;
+  font-size: 3em !important;
+  color: #000 !important;
 }
